<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadPost">

    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageViewPhoto"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="65dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            app:srcCompat="@android:drawable/ic_menu_crop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSelectImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#149777"
                android:fontFamily="@font/bree_serif"
                android:text="@string/select_image"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/buttonCaptureImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:background="@android:drawable/ic_menu_camera"
                android:backgroundTint="@color/black"
                android:contentDescription="capture_image" />
        </LinearLayout>


        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="Price"
            android:inputType="numberDecimal"
            android:text="@string/rs" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Contact number"
            android:inputType="phone"
            android:text="@string/tp" />


        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="description" />

        <fragment
            android:id="@+id/mapFragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="375dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/buttonSavePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#149777"
            android:text="@string/upload_ad"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


