<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

        <TextView
            android:id="@+id/explore"
            android:layout_width="256dp"
            android:layout_height="106dp"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="356dp"
            android:fontFamily="@font/bree_serif"
            android:text="Welcome\nBack"
            android:textSize="38sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/bree_serif"
            android:text="Sign in to continue"
            app:layout_constraintBottom_toTopOf="@+id/emailLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/passwordLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="example@gmail.com"
                    android:fontFamily="@font/bree_serif"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="32dp"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="12dgAs35/"
                    android:fontFamily="@font/bree_serif"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#149777"
            android:padding="1dp"
            android:fontFamily="@font/bree_serif"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.8" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="36dp"
            android:fontFamily="@font/bree_serif"
            android:textSize="15sp"
            android:hint="@string/new_here"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signupbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/bree_serif"
            android:gravity="center"
            android:onClick="onRegisterClick"
            android:padding="1dp"
            android:textSize="15sp"
            android:text="@string/signup"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>
